--- a/Every.Do-TableView/Base.lproj/Main.storyboard
+++ b/Every.Do-TableView/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4o9-6X-zbg">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,135 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rVc-dC-6jJ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="toDoCell" rowHeight="82" id="WMs-sv-zOg" customClass="ToDoTableViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="82"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WMs-sv-zOg" id="MGI-Jm-FtY">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="81.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dIB-C5-Trj">
+                                                    <rect key="frame" x="23" y="19" width="257" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VEi-lC-8oc" userLabel="previewLabel">
+                                                    <rect key="frame" x="23" y="48" width="257" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IcW-G8-kkE">
+                                                    <rect key="frame" x="288" y="30.5" width="80" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="VEi-lC-8oc" firstAttribute="leading" secondItem="MGI-Jm-FtY" secondAttribute="leadingMargin" constant="8" id="0nb-ay-BFt"/>
+                                                <constraint firstItem="IcW-G8-kkE" firstAttribute="trailing" secondItem="MGI-Jm-FtY" secondAttribute="trailingMargin" constant="8" id="4IX-IG-Un8"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="dIB-C5-Trj" secondAttribute="trailing" constant="80" id="J8e-z4-8Eb"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="VEi-lC-8oc" secondAttribute="bottom" constant="8" id="OSj-yY-U0r"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="VEi-lC-8oc" secondAttribute="trailing" constant="80" id="PMu-8s-tZp"/>
+                                                <constraint firstItem="dIB-C5-Trj" firstAttribute="top" secondItem="MGI-Jm-FtY" secondAttribute="topMargin" constant="8" id="ZSV-pQ-rNA"/>
+                                                <constraint firstItem="IcW-G8-kkE" firstAttribute="centerY" secondItem="MGI-Jm-FtY" secondAttribute="centerY" id="bmS-lr-THb"/>
+                                                <constraint firstItem="dIB-C5-Trj" firstAttribute="leading" secondItem="MGI-Jm-FtY" secondAttribute="leadingMargin" constant="8" id="dk9-zb-ecv"/>
+                                                <constraint firstItem="IcW-G8-kkE" firstAttribute="leading" secondItem="dIB-C5-Trj" secondAttribute="trailing" constant="8" id="hlN-Kw-Fxt"/>
+                                                <constraint firstItem="VEi-lC-8oc" firstAttribute="top" secondItem="dIB-C5-Trj" secondAttribute="bottom" constant="8" id="oSm-6y-lGB"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="mainTask" destination="dIB-C5-Trj" id="tSt-ku-MOu"/>
+                                            <outlet property="previewLabel" destination="VEi-lC-8oc" id="Fmp-Ni-eUf"/>
+                                            <outlet property="priorityLabel" destination="IcW-G8-kkE" id="BfR-6b-6DF"/>
+                                            <segue destination="9ML-7R-llP" kind="show" identifier="segueToDetailsPage" id="G9t-G6-qQj"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="rhD-b7-QfM"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="boR-Im-vPU"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rVc-dC-6jJ" secondAttribute="bottom" id="6vg-RC-lYC"/>
+                            <constraint firstItem="rVc-dC-6jJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FEv-P1-dVA"/>
+                            <constraint firstItem="rVc-dC-6jJ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="KxR-yJ-3XB"/>
+                            <constraint firstItem="rVc-dC-6jJ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="rt0-Af-LS6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="fPo-Zf-9U5"/>
+                    <connections>
+                        <outlet property="tableView" destination="rVc-dC-6jJ" id="xEO-eS-MTJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="980" y="26.53673163418291"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="7aO-Z6-p0V">
+            <objects>
+                <viewController id="9ML-7R-llP" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZvZ-i0-nr2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Bs-vC-XNM">
+                                <rect key="frame" x="8" y="158.5" width="359" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="fPn-0d-kNr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="2ED-sP-1YS" firstAttribute="trailing" secondItem="7Bs-vC-XNM" secondAttribute="trailing" constant="8" id="Jff-2r-3As"/>
+                            <constraint firstItem="7Bs-vC-XNM" firstAttribute="centerY" secondItem="ZvZ-i0-nr2" secondAttribute="centerY" constant="-100" id="V6O-8t-frY"/>
+                            <constraint firstItem="7Bs-vC-XNM" firstAttribute="centerX" secondItem="ZvZ-i0-nr2" secondAttribute="centerX" id="wQh-al-p5k"/>
+                            <constraint firstItem="7Bs-vC-XNM" firstAttribute="leading" secondItem="2ED-sP-1YS" secondAttribute="leading" constant="8" id="yjg-8j-15M"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2ED-sP-1YS"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dnc-KW-78o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1920.8" y="26.53673163418291"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="YfC-fE-F46">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4o9-6X-zbg" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QZe-s7-XZm">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Ah9-Qt-HRX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YoW-Vg-LSf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="54" y="27"/>
         </scene>
     </scenes>
 </document>
