--- a/Every.Do-TableView/Base.lproj/Main.storyboard
+++ b/Every.Do-TableView/Base.lproj/Main.storyboard
@@ -61,6 +61,7 @@
                                                 <constraint firstItem="VEi-lC-8oc" firstAttribute="top" secondItem="dIB-C5-Trj" secondAttribute="bottom" constant="8" id="oSm-6y-lGB"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <gestureRecognizers/>
                                         <connections>
                                             <outlet property="mainTask" destination="dIB-C5-Trj" id="tSt-ku-MOu"/>
                                             <outlet property="previewLabel" destination="VEi-lC-8oc" id="Fmp-Ni-eUf"/>
@@ -76,6 +77,7 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="rVc-dC-6jJ" secondAttribute="bottom" id="6vg-RC-lYC"/>
                             <constraint firstItem="rVc-dC-6jJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="FEv-P1-dVA"/>
@@ -83,6 +85,9 @@
                             <constraint firstItem="rVc-dC-6jJ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="rt0-Af-LS6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="rvv-zt-0qr" appends="YES" id="8mL-Za-B7i"/>
+                        </connections>
                     </view>
                     <navigationItem key="navigationItem" id="fPo-Zf-9U5">
                         <barButtonItem key="rightBarButtonItem" title="NEW" id="nI8-dM-E6W">
@@ -97,6 +102,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="left" id="rvv-zt-0qr">
+                    <connections>
+                        <action selector="swipeLeft:" destination="BYZ-38-t0r" id="M8F-Gc-5jJ"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="980" y="26.53673163418291"/>
         </scene>
